deploy: 52bf7a56e320fc343b9ab10736175546e9d7e476

--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -189,7 +189,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-18 Jul 2025</p>
+20 Jul 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -471,8 +471,15 @@ let me know if I missed you!</p>
 <p>Tasty Basic is a product of Dimitri Theulings.</p>
 </li>
 <li>
-<p>Dean Netherton contributed eZ80 CPU support, the sound driver
-  interface, and the SN76489 sound driver.</p>
+<p>Dean Netherton contributed multiple components:</p>
+</li>
+<li>
+<p>eZ80 CPU support</p>
+</li>
+<li>Sound driver infrastructure</li>
+<li>SN76489 sound driver</li>
+<li>
+<p>Native USB driver (keyboard, floppy, mass storage)</p>
 </li>
 <li>
 <p>The RomWBW Disk Catalog document was produced by Mykl Orders.</p>
