--- a/SystemGuide/index.html
+++ b/SystemGuide/index.html
@@ -659,7 +659,7 @@
 <p><strong>RomWBW System Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-18 Jul 2025</p>
+20 Jul 2025</p>
 <h1 id="overview">Overview</h1>
 <p>The objective of RomWBW is to provide firmware, operating systems, and
 applications targeting the Z80 family of CPUs. The firmware, in the form
@@ -4777,14 +4777,14 @@ Sound Unit (C). The frequency is standardized and is specified by using
 values that correspond to musical notes. The frequency will be applied
 when the next SNDPLAY function is invoked. The returned Status (A) is a
 standard HBIOS result code.</p>
-<p>The Note (HL) values correspond to quarter notes. Increasing/decreasing
-the value by 4 results in a full note increment/decrement.<br />
+<p>The Note (HL) values correspond to eighth notes. Increasing/decreasing
+the value by 8 results in a full note increment/decrement.<br />
 Increasing/decreasing the value by 48 results in a full octave
 increment/decrement. The value 0 corresponds to Bb/A# in octave 0.</p>
 <p>The sound chip resolution and its oscillator limit the range and
 accuracy of the notes played. The typical range of the AY-3-8910 is six
 octaves: Bb2/A#2 to A7, where each value is a unique tone. Values above
-and below can still be played but each quarter tone step may not result
+and below can still be played but each eighth tone step may not result
 in a note change.</p>
 <p>The following table shows the mapping of the Note (HL) value to the
 corresponding octave and note.</p>
