deploy: 74f9daaaaab37fe1281271ba06b47789dc2a4e5f

--- a/UserGuide/index.html
+++ b/UserGuide/index.html
@@ -535,7 +535,7 @@
 <p><strong>RomWBW User Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-20 Jul 2025</p>
+21 Jul 2025</p>
 <h4 id="preface">Preface</h4>
 <p>This document is a general usage guide for the RomWBW software and is
 generally the best place to start with RomWBW.</p>
@@ -2623,7 +2623,7 @@ that you leave the Combo image alone and simply define your own.</p>
 this way (including the Combo disk image) will already be prefixed with
 <code>hd1k_prefix.dat</code>, so you do not need to add the prefix file. They are
 ready to write to your media.</p>
-<h4 id="combining-hard-disk-images">Combining Hard Disk Images</h4>
+<h4 id="combining-hard-disk-images-manually">Combining Hard Disk Images Manually</h4>
 <p>You can add slices to the Combo Disk Images simply by tacking slices
 onto the end. For example, if you want to add a slice containing the MSX
 ROMs to the end of the combo image, you could use one of the following
@@ -2634,7 +2634,7 @@ command lines depending on your operating system:</p>
 <p><code>cat hd1k_combo.img hd1k_msxroms.img &gt;my_hd.img</code></p>
 <p>Note that you <strong>must</strong> be sure to use either the hd1k_ or hd512_
 prefixed files together. You cannot mix them.</p>
-<h4 id="creating-a-new-custom-image">Creating a new Custom Image</h4>
+<h4 id="creating-a-new-custom-image-manually">Creating a new Custom Image Manually</h4>
 <p>If you want to create a completely custom hard disk image that is not
 based on the existing combo image, you can generate a disk image
 entirely from scratch using whatever slices you want in whatever order
