deploy: a68ae0cd245d9f43421cc6182e7d84258be14538

--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -336,7 +336,7 @@
 <p><strong>RomWBW Disk Catalog</strong> \
 Version 3.6 \
 Mark Pruden \&amp; Mykl Orders  (<a href="mailto:"></a>) \
-21 Jul 2025</p>
+29 Jul 2025</p>
 <h1 id="romwbw-distribution-file-catalog">RomWBW Distribution File Catalog</h1>
 <p>This document is a reference to the files found on the disk media
 distributed with RomWBW. Specifically, RomWBW provides a set of floppy
@@ -2370,7 +2370,7 @@ obvious.</p>
 </tbody>
 </table>
 <h2 id="os-general-files">OS General Files</h2>
-<p>The following files are spcific files share across several OS’s.<br />
+<p>The following files are specific files shared across several OS’s.<br />
 In general, there is no documentation for these applications included
 with the RomWBW distribution. Some provide command line help
 themselves.<br />
@@ -2415,6 +2415,11 @@ Some are fairly obvious.</p>
 <td><code>EDITNDR.COM</code></td>
 <td>Z3</td>
 <td>Edit named directory register in memory.</td>
+</tr>
+<tr>
+<td><code>HELLO.ASM</code></td>
+<td>CPM22</td>
+<td>Sample assembly language source file</td>
 </tr>
 <tr>
 <td><code>HP-RPN.HLP</code></td>
