--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -189,7 +189,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-21 Jul 2025</p>
+29 Jul 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -251,7 +251,7 @@ changing media.</p>
 <li>Support for other operating systems, p-System, FreeRTOS, and FUZIX.</li>
 <li>Programming Tools (Z80ASM, Turbo Pascal, Forth, Cowgol)</li>
 <li>C Compiler’s including Aztec-C, and HI-TECH C</li>
-<li>Microsoft Basic Compiler, and Microsoft Fortran</li>
+<li>Microsoft Basic Compiler, Microsoft Fortran, and Microsoft COBOL</li>
 <li>Some games such as Colossal Cave, Zork, etc</li>
 <li>Wordstar Word processing software</li>
 </ul>
@@ -559,6 +559,10 @@ let me know if I missed you!</p>
 <li>
 <p>Jörg Linder has contributed disassembled and nicely commented source
   for ZSDOS2 and the BPBIOS utilities.</p>
+</li>
+<li>
+<p>Marshall Gates has contriubed sample program source files for all of
+  the language disk images.</p>
 </li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
