--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-21 Jul 2025</p>
+29 Jul 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -241,7 +241,7 @@ changing media.</p>
 <li>Support for other operating systems, p-System, FreeRTOS, and FUZIX.</li>
 <li>Programming Tools (Z80ASM, Turbo Pascal, Forth, Cowgol)</li>
 <li>C Compiler’s including Aztec-C, and HI-TECH C</li>
-<li>Microsoft Basic Compiler, and Microsoft Fortran</li>
+<li>Microsoft Basic Compiler, Microsoft Fortran, and Microsoft COBOL</li>
 <li>Some games such as Colossal Cave, Zork, etc</li>
 <li>Wordstar Word processing software</li>
 </ul>
@@ -550,6 +550,10 @@ let me know if I missed you!</p>
 <p>Jörg Linder has contributed disassembled and nicely commented source
   for ZSDOS2 and the BPBIOS utilities.</p>
 </li>
+<li>
+<p>Marshall Gates has contriubed sample program source files for all of
+  the language disk images.</p>
+</li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
 <p>Outside of the hardware platforms adapted to RomWBW, there are a variety
@@ -693,5 +697,5 @@ control system to ensure their contributions are clearly documented.</p>
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-07-21 18:42:54.187734+00:00
+Build Date UTC : 2025-07-29 21:20:03.570013+00:00
 -->
