--- a/SystemGuide/index.html
+++ b/SystemGuide/index.html
@@ -659,7 +659,7 @@
 <p><strong>RomWBW System Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-06 Aug 2025</p>
+10 Aug 2025</p>
 <h1 id="overview">Overview</h1>
 <p>The objective of RomWBW is to provide firmware, operating systems, and
 applications targeting the Z80 family of CPUs. The firmware, in the form
@@ -2247,6 +2247,12 @@ enumerates their values.</p>
 <td style="text-align: right;">0x0F</td>
 <td>CH376 Native USB Device</td>
 <td>ch376.asm</td>
+</tr>
+<tr>
+<td>DIODEV_ESPSD</td>
+<td style="text-align: right;">0x10</td>
+<td>S100 ESP32 SD Card</td>
+<td>espsd.asm</td>
 </tr>
 </tbody>
 </table>
