deploy: 15e44ecd8e269dcf3199cf0a4dff128ab49304ce

--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -336,7 +336,7 @@
 <p><strong>RomWBW Disk Catalog</strong> \
 Version 3.6 \
 Mark Pruden \&amp; Mykl Orders  (<a href="mailto:"></a>) \
-10 Aug 2025</p>
+13 Aug 2025</p>
 <h1 id="romwbw-distribution-file-catalog">RomWBW Distribution File Catalog</h1>
 <p>This document is a reference to the files found on the disk media
 distributed with RomWBW. Specifically, RomWBW provides a set of floppy
@@ -3549,6 +3549,10 @@ CP/M and compatible operations systems provided in RomWBW.</p>
 <tr>
 <td><code>FLOAT.H</code></td>
 <td>Language include file (see manual)</td>
+</tr>
+<tr>
+<td><code>HELLO.C</code></td>
+<td>Sample C source file</td>
 </tr>
 <tr>
 <td><code>HITECH.H</code></td>
