--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -336,7 +336,7 @@
 <p><strong>RomWBW Disk Catalog</strong> \
 Version 3.6 \
 Mark Pruden \&amp; Mykl Orders  (<a href="mailto:"></a>) \
-23 Aug 2025</p>
+01 Sep 2025</p>
 <h1 id="romwbw-distribution-file-catalog">RomWBW Distribution File Catalog</h1>
 <p>This document is a reference to the files found on the disk media
 distributed with RomWBW. Specifically, RomWBW provides a set of floppy
@@ -2181,6 +2181,11 @@ obvious.</p>
 <td><code>DDTZ.DOC</code></td>
 <td></td>
 <td>Documentation for DDTZ</td>
+</tr>
+<tr>
+<td><code>DOWNLOAD.COM</code></td>
+<td>Grant Searle</td>
+<td>Grant Searle’s DOWNLOAD, used by File Packager</td>
 </tr>
 <tr>
 <td><code>EX.COM</code></td>
