deploy: 5e7009876cbba2e0f103b12860497f1ebed82512

--- a/UserGuide/index.html
+++ b/UserGuide/index.html
@@ -527,7 +527,7 @@
 <p><strong>RomWBW User Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-01 Sep 2025</p>
+13 Sep 2025</p>
 <h4 id="preface">Preface</h4>
 <p>This document is a general usage guide for the RomWBW software and is
 generally the best place to start with RomWBW.</p>
@@ -3105,6 +3105,8 @@ via the NZ-COM adaptation (see below).</p>
 <li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/CPM/ZCPR-DJ.doc">ZCPR-DJ</a></li>
 <li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/CPM/ZSDOS%20Manual.pdf">ZSDOS
   Manual</a></li>
+<li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/CPM/ZSDOS%20Programmers%20Manual.pdf">ZSDOS Programmer’s
+  Manual</a></li>
 </ul>
 <h4 id="boot-disk_1">Boot Disk</h4>
 <p>To make a bootable Z-System disk, use the RomWBW <code>SYSCOPY</code> tool to place
@@ -3186,6 +3188,8 @@ to use this operating system effectively.</p>
   Guide</a></li>
 <li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/CPM/ZCPR3.3%20User%20Guide.pdf">ZCPR3.3 User
   Guide</a></li>
+<li><a href="https://github.com/wwarthen/RomWBW/raw/master/Doc/CPM/ZSDOS%20Programmers%20Manual.pdf">ZSDOS Programmer’s
+  Manual</a></li>
 </ul>
 <h4 id="boot-disk_2">Boot Disk</h4>
 <p>Since NZ-COM boots via Z-System, you can make a bootable NZ-COM disk
