--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -189,7 +189,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-01 Sep 2025</p>
+13 Sep 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -563,6 +563,10 @@ let me know if I missed you!</p>
 <li>
 <p>Marshall Gates has contriubed sample program source files for all of
   the language disk images.</p>
+</li>
+<li>
+<p>Randy Merkel provided the ZSDOS Programmer’s Manual as translated by
+  Wayne Hortensius.</p>
 </li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
