--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-01 Sep 2025</p>
+13 Sep 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -554,6 +554,10 @@ let me know if I missed you!</p>
 <p>Marshall Gates has contriubed sample program source files for all of
   the language disk images.</p>
 </li>
+<li>
+<p>Randy Merkel provided the ZSDOS Programmer’s Manual as translated by
+  Wayne Hortensius.</p>
+</li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
 <p>Outside of the hardware platforms adapted to RomWBW, there are a variety
@@ -697,5 +701,5 @@ control system to ensure their contributions are clearly documented.</p>
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-09-01 22:01:57.997482+00:00
+Build Date UTC : 2025-09-13 19:13:39.067378+00:00
 -->
